--- a/.github/工作流/main.yml
+++ b/.github/工作流/main.yml
@@ -12,11 +12,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
     
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v3
+
+  - name: Set up Python 3.9
+        uses: actions/setup-python@v2
         with:
-          python-version: "3.10"
-          cache: "pip"
+          python-version: 3.9.1
 
       - name: Set timezone
         run: |
